# AOS-NLQ

./: .dockerignore  .env.example  .gitignore  .replit  AOS_COMPREHENSIVE_CLAUDE.md  AOS_CONSOLIDATED_CLAUDE.md  AUDIT_PLAN.md  CLAUDE.md  Dockerfile  EVAL_PROOF.md  GROUND_TRUTH.md  GROUND_TRUTH_AUDIT.md  LIVE_MODE_FIX.md  LIVE_MODE_TEST_RESULTS.md  LIVE_TEST_RESULTS.md  MOBILE_FRIENDLY_PLAN.md  NLQ_Claude_Code_Project_Guide.md  NLQ_Claude_Code_Prompts.md  NLQ_Multi_Persona_Test_Suite.md  NLQ_SYSTEM_OVERVIEW.md  TESTING.md  TEST_RESULTS.md  XXI5GBfY  app.py  build.sh  db.py  dcl_client.py  eval_results.json  eval_runner.py  index.html  nlq.md  nlq_deferred_work.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  render.yaml  replit.md  requirements.txt  start.sh  (+10 more)
.streamlit/: config.toml
ONGOING PROMPTS/: AOS_COMPREHENSIVE_CLAUDE.md
ONGOING_PROMPTS/: DCL_SEMANTIC_CATALOG.md  MapWidget.tsx  fact_base.json
attached_assets/: FACT_BASE_V3_SUMMARY_1769895462775.md  MapWidget_1770065030082.tsx  Pasted--NLQ-People-Persona-HR-Workplace-Domain-Overview-The-Pe_1769560989452.txt  Pasted-Handoff-Surface-1-Semantic-Export-the-catalog-Endpoint-_1771192217765.txt  Pasted-Integrating-the-stable-NLQ-Natural-Language-Querying-mo_1769645755020.txt  fact_base_v3_1769895462776.json
data/: entity_test_scenarios.json  fact_base.json  fact_base.json.disabled  fact_base_farm_generated.json  fact_base_legacy_handauthored.json  nlq_test_questions.json  query_patterns_seed.yaml
docs/: E2E_Integration_Test_CC_Task.md  E2E_Test_Protocol_CC_Task.md  ENV_MASTER.md  (+9 more)
(+456 files in other folders)
