[project]
name = "aos-nlq"
version = "0.1.0"
description = "Natural Language Query engine for enterprise data - part of AutonomOS platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "anthropic>=0.40.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
    "httpx>=0.28.0",
    "psycopg2-binary>=2.9.11",
    "streamlit>=1.53.1",
    "pinecone>=8.0.0",
    "openai>=2.16.0",
    "supabase>=2.27.2",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nlq"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
